// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`exports-snapshot/pkg-placeholder pkg-placeholder/./runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`pkg-placeholder\`
 */
// #region Variables
export var one
export var two
// #endregion"
`;

exports[`exports-snapshot/pkg-placeholder pkg-placeholder/./dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`pkg-placeholder\`
 */
// #region Variables
export declare const one: number;
export declare const two: number;
// #endregion"
`;
